rework main_properties() into rank_properties()

--- a/README.ipynb
+++ b/README.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "*   [Introduction](#introduction)\n",
     "*   [Querying data using `SoilGrids`](#querying-data)\n",
-    "*   [Getting the property (clay, sand, silt) with the highest value for each point](#top-properties)\n",
+    "*   [Getting the property (clay, sand, silt) with the highest value for each point](#rank-properties)\n",
     "*   [Analysing the relationship between clay, sand, silt and organic carbon stock](#property-relationships)\n",
     "*   [Additional features](additional-features)\n",
     "    *   [Method `SoilGrids.plot_ocs_property_relationships()`](#plot_ocs_property_relationships)\n",
@@ -123,11 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting the property (clay, sand, silt) with the highest value for each point <a name=\"top-properties\"></a>\n",
+    "## Getting the property (clay, sand, silt) with the highest value for each point <a name=\"rank-properties\"></a>\n",
     "\n",
-    "The `SoilGrids` class provides a handy utility `main_properties()` for finding\n",
-    "the most abundant soil type (i.e. property) for each point. In this case, we\n",
-    "see that the Herning region is quite sandy:"
+    "The `SoilGrids` class provides a handy utility `rank_properties()` for finding\n",
+    "the most abundant soil types (i.e. properties) for each point. We see that \n",
+    "throughout the Herning region, the main soil properties are, in order, sand, \n",
+    "silt, and clay"
    ]
   },
   {
@@ -138,58 +139,57 @@
     {
      "data": {
       "text/markdown": [
-       "|     lat |     lon | soil_property   |\n",
-       "|--------:|--------:|:----------------|\n",
-       "| 55.9681 | 9.19413 | sand            |\n",
-       "| 55.969  | 8.84612 | sand            |\n",
-       "| 55.9736 | 9.26458 | sand            |\n",
-       "| 55.988  | 9.06893 | sand            |\n",
-       "| 56.0024 | 9.17168 | sand            |\n",
-       "| 56.0071 | 8.73347 | sand            |\n",
-       "| 56.0079 | 9.1555  | sand            |\n",
-       "| 56.0115 | 9.19478 | sand            |\n",
-       "| 56.0116 | 9.11962 | sand            |\n",
-       "| 56.0129 | 9.06321 | sand            |\n",
-       "| 56.0152 | 9.09177 | sand            |\n",
-       "| 56.0209 | 9.04625 | sand            |\n",
-       "| 56.0215 | 9.01066 | sand            |\n",
-       "| 56.0218 | 9.32185 | sand            |\n",
-       "| 56.0227 | 8.77494 | sand            |\n",
-       "| 56.0245 | 8.98394 | sand            |\n",
-       "| 56.0293 | 8.80021 | sand            |\n",
-       "| 56.0312 | 9.20504 | sand            |\n",
-       "| 56.0312 | 9.33958 | sand            |\n",
-       "| 56.0322 | 9.13423 | sand            |\n",
-       "| 56.0327 | 8.69833 | sand            |\n",
-       "| 56.0335 | 8.82781 | sand            |\n",
-       "| 56.0421 | 8.89465 | sand            |\n",
-       "| 56.0457 | 9.2178  | sand            |\n",
-       "| 56.0524 | 9.05007 | sand            |\n",
-       "| 56.0591 | 9.0177  | sand            |\n",
-       "| 56.0706 | 9.04175 | sand            |\n",
-       "| 56.0731 | 9.1996  | sand            |\n",
-       "| 56.0768 | 9.11822 | sand            |\n",
-       "| 56.0801 | 8.89161 | sand            |\n",
-       "| 56.0936 | 8.88005 | sand            |\n",
-       "| 56.1016 | 8.93631 | sand            |\n",
-       "| 56.1029 | 9.29378 | sand            |\n",
-       "| 56.1034 | 9.1627  | sand            |\n",
-       "| 56.1084 | 9.21805 | sand            |\n",
-       "| 56.1126 | 8.80794 | sand            |\n",
-       "| 56.1153 | 8.81545 | sand            |\n",
-       "| 56.1223 | 9.24917 | sand            |\n",
-       "| 56.1239 | 8.72794 | sand            |\n",
-       "| 56.124  | 8.96254 | sand            |\n",
-       "| 56.127  | 8.91474 | sand            |\n",
-       "| 56.1365 | 9.0808  | sand            |\n",
-       "| 56.1462 | 8.93131 | clay            |\n",
-       "| 56.1644 | 9.26652 | sand            |\n",
-       "| 56.1707 | 8.92046 | sand            |\n",
-       "| 56.177  | 8.82983 | sand            |\n",
-       "| 56.1878 | 9.00154 | sand            |\n",
-       "| 56.2074 | 9.23711 | sand            |\n",
-       "| 56.2128 | 9.33269 | sand            |\n",
-       "| 56.2192 | 8.77554 | sand            |"
+       "|     lat |     lon | depth   | mapped_units   | property_no1   | property_no2   | property_no3   |\n",
+       "|--------:|--------:|:--------|:---------------|:---------------|:---------------|:---------------|\n",
+       "| 55.9681 | 9.19413 | 0-30cm  | g/kg           | sand: 863      | silt:  75      | clay:  62      |\n",
+       "| 55.969  | 8.84612 | 0-30cm  | g/kg           | sand: 858      | silt:  89      | clay:  52      |\n",
+       "| 55.9736 | 9.26458 | 0-30cm  | g/kg           | sand: 846      | silt:  92      | clay:  63      |\n",
+       "| 55.988  | 9.06893 | 0-30cm  | g/kg           | sand: 852      | silt:  96      | clay:  51      |\n",
+       "| 56.0024 | 9.17168 | 0-30cm  | g/kg           | sand: 812      | silt: 101      | clay:  88      |\n",
+       "| 56.0071 | 8.73347 | 0-30cm  | g/kg           | sand: 846      | silt:  98      | clay:  55      |\n",
+       "| 56.0079 | 9.1555  | 0-30cm  | g/kg           | sand: 847      | silt: 101      | clay:  52      |\n",
+       "| 56.0115 | 9.19478 | 0-30cm  | g/kg           | sand: 876      | silt:  73      | clay:  50      |\n",
+       "| 56.0116 | 9.11962 | 0-30cm  | g/kg           | sand: 854      | silt:  95      | clay:  51      |\n",
+       "| 56.0129 | 9.06321 | 0-30cm  | g/kg           | sand: 865      | silt:  81      | clay:  54      |\n",
+       "| 56.0152 | 9.09177 | 0-30cm  | g/kg           | sand: 855      | silt:  93      | clay:  52      |\n",
+       "| 56.0209 | 9.04625 | 0-30cm  | g/kg           | sand: 868      | silt:  75      | clay:  57      |\n",
+       "| 56.0215 | 9.01066 | 0-30cm  | g/kg           | sand: 870      | silt:  92      | clay:  37      |\n",
+       "| 56.0218 | 9.32185 | 0-30cm  | g/kg           | sand: 793      | silt: 129      | clay:  78      |\n",
+       "| 56.0227 | 8.77494 | 0-30cm  | g/kg           | sand: 659      | silt: 263      | clay:  77      |\n",
+       "| 56.0245 | 8.98394 | 0-30cm  | g/kg           | sand: 858      | silt:  96      | clay:  45      |\n",
+       "| 56.0293 | 8.80021 | 0-30cm  | g/kg           | sand: 786      | silt: 134      | clay:  80      |\n",
+       "| 56.0312 | 9.20504 | 0-30cm  | g/kg           | sand: 838      | silt: 102      | clay:  60      |\n",
+       "| 56.0312 | 9.33958 | 0-30cm  | g/kg           | sand: 807      | silt: 121      | clay:  71      |\n",
+       "| 56.0322 | 9.13423 | 0-30cm  | g/kg           | sand: 864      | silt:  83      | clay:  55      |\n",
+       "| 56.0327 | 8.69833 | 0-30cm  | g/kg           | sand: 857      | silt:  93      | clay:  50      |\n",
+       "| 56.0335 | 8.82781 | 0-30cm  | g/kg           | sand: 820      | silt: 112      | clay:  67      |\n",
+       "| 56.0421 | 8.89465 | 0-30cm  | g/kg           | sand: 819      | silt: 106      | clay:  74      |\n",
+       "| 56.0457 | 9.2178  | 0-30cm  | g/kg           | sand: 848      | silt: 101      | clay:  50      |\n",
+       "| 56.0524 | 9.05007 | 0-30cm  | g/kg           | sand: 846      | silt:  98      | clay:  57      |\n",
+       "| 56.0591 | 9.0177  | 0-30cm  | g/kg           | sand: 815      | silt: 112      | clay:  73      |\n",
+       "| 56.0706 | 9.04175 | 0-30cm  | g/kg           | sand: 840      | silt: 108      | clay:  53      |\n",
+       "| 56.0731 | 9.1996  | 0-30cm  | g/kg           | sand: 845      | silt:  93      | clay:  61      |\n",
+       "| 56.0768 | 9.11822 | 0-30cm  | g/kg           | sand: 857      | silt:  93      | clay:  50      |\n",
+       "| 56.0801 | 8.89161 | 0-30cm  | g/kg           | sand: 830      | silt: 106      | clay:  62      |\n",
+       "| 56.0936 | 8.88005 | 0-30cm  | g/kg           | sand: 841      | silt:  92      | clay:  65      |\n",
+       "| 56.1016 | 8.93631 | 0-30cm  | g/kg           | sand: 791      | silt: 138      | clay:  71      |\n",
+       "| 56.1029 | 9.29378 | 0-30cm  | g/kg           | sand: 759      | silt: 132      | clay: 111      |\n",
+       "| 56.1034 | 9.1627  | 0-30cm  | g/kg           | sand: 864      | silt:  87      | clay:  49      |\n",
+       "| 56.1084 | 9.21805 | 0-30cm  | g/kg           | sand: 846      | silt:  84      | clay:  71      |\n",
+       "| 56.1126 | 8.80794 | 0-30cm  | g/kg           | sand: 836      | silt:  98      | clay:  65      |\n",
+       "| 56.1153 | 8.81545 | 0-30cm  | g/kg           | sand: 833      | silt: 107      | clay:  60      |\n",
+       "| 56.1223 | 9.24917 | 0-30cm  | g/kg           | sand: 838      | silt:  95      | clay:  67      |\n",
+       "| 56.1239 | 8.72794 | 0-30cm  | g/kg           | sand: 826      | silt: 109      | clay:  65      |\n",
+       "| 56.124  | 8.96254 | 0-30cm  | g/kg           | sand: 810      | silt: 125      | clay:  66      |\n",
+       "| 56.127  | 8.91474 | 0-30cm  | g/kg           | sand: 649      | silt: 252      | clay: 100      |\n",
+       "| 56.1365 | 9.0808  | 0-30cm  | g/kg           | sand: 786      | silt: 111      | clay: 104      |\n",
+       "| 56.1644 | 9.26652 | 0-30cm  | g/kg           | sand: 801      | silt: 117      | clay:  84      |\n",
+       "| 56.1707 | 8.92046 | 0-30cm  | g/kg           | sand: 802      | silt: 128      | clay:  70      |\n",
+       "| 56.177  | 8.82983 | 0-30cm  | g/kg           | sand: 807      | silt: 136      | clay:  57      |\n",
+       "| 56.1878 | 9.00154 | 0-30cm  | g/kg           | sand: 870      | silt:  86      | clay:  44      |\n",
+       "| 56.2074 | 9.23711 | 0-30cm  | g/kg           | sand: 807      | silt: 118      | clay:  75      |\n",
+       "| 56.2128 | 9.33269 | 0-30cm  | g/kg           | sand: 729      | silt: 183      | clay:  87      |\n",
+       "| 56.2192 | 8.77554 | 0-30cm  | g/kg           | sand: 820      | silt: 115      | clay:  64      |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -200,7 +200,11 @@
     }
    ],
    "source": [
-    "show(sg.main_properties())"
+    "show(sg.rank_properties(\n",
+    "    subset=['clay', 'sand', 'silt'], \n",
+    "    top_depth=0, \n",
+    "    bottom_depth=30\n",
+    "))"
    ]
   },
   {
@@ -355,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
