--- a/README.ipynb
+++ b/README.ipynb
@@ -342,19 +342,21 @@
     "\n",
     "Working with data from SoilGrids poses a challenge since different soil \n",
     "properties are measured at different levels of granularity. For example, values\n",
-    "for clay will be provided at 0-5cm, 5-15cm, and 15-30cm, whereas OCS will be \n",
-    "provided as a single value for 0-30cm as a whole.\n",
+    "for clay will be provided at depths 0-5cm, 5-15cm, and 15-30cm, whereas OCS \n",
+    "will be provided as a single value for 0-30cm as a whole.\n",
     "\n",
-    "In order to easily compare, say, `ocs` with `clay`, we need to\n",
-    "aggregate the values for `clay` to get a representative measurement for the \n",
-    "whole 0-30cm. However, the 3 values for clay cover 5, 10 and 15 cm of depth\n",
-    "respectively, so we can't simply take the mean across each value.\n",
+    "In order to easily compare OCS with clay, we need to\n",
+    "aggregate the values for clay to get a representative measurement for the \n",
+    "whole 0-30cm. However, since the 3 values for clay don't all cover the same \n",
+    "amount of depth (they cover 5, 10 and 15 centimetres respectively), we can't \n",
+    "simply take the mean across each value.\n",
     "\n",
-    "`SoilGrids.aggregate_means()` is a utility for aggregating Soilgrids data whilst\n",
-    "weighting individual values according to the total depth they represent, and \n",
-    "it is used to power other methods such as `plot_ocs_property_relationships()`, \n",
-    "`plot_property_map()` and `ocs_correlation()`. The following shows how values\n",
-    "are aggregated for a single point:"
+    "`SoilGrids.aggregate_means()` is a utility for aggregating the mean values\n",
+    "provided by Soilgrids by weighting individual values according to the total \n",
+    "depth they represent. This method powers other methods such as \n",
+    "`plot_ocs_property_relationships()`, `plot_property_map()` and \n",
+    "`ocs_correlation()`. The following shows how mean values are aggregated for a \n",
+    "single point:"
    ]
   },
   {
