--- a/README.ipynb
+++ b/README.ipynb
@@ -100,12 +100,12 @@
     "sg = SoilGrids()\n",
     "\n",
     "# get_points_sample() reads in a uniformly distributed random sample of\n",
-    "# points within specified bounds. If you want to query an exact set of\n",
-    "# points, you can use `SoilGrids.get_points()`.\n",
+    "# points within specified bounds. If you wanted to query an exact set of\n",
+    "# points, you could use `sg.get_points()`.\n",
     "sg.get_points_sample(\n",
     "    50,\n",
-    "    lat_a=56.225297, lon_a=8.662215,\n",
-    "    lat_b=55.958103, lon_b=9.354390,\n",
+    "    lat_min=55.958103, lon_min=8.662215,\n",
+    "    lat_max=56.225297, lon_max=9.354390,\n",
     "    soil_property=['clay', 'sand', 'silt', 'ocs'],\n",
     "    depth=['0-5cm', '5-15cm', '15-30cm', '0-30cm'],\n",
     "    value='mean'\n",
