More tidying of docs; make more arguments keyword-only

--- a/README.ipynb
+++ b/README.ipynb
@@ -104,8 +104,8 @@
     "# points, you could use `sg.get_points()`.\n",
     "sg.get_points_sample(\n",
     "    50,\n",
-    "    lat_min=55.958103, lon_min=8.662215,\n",
-    "    lat_max=56.225297, lon_max=9.354390,\n",
+    "    lat_min=55.958103, lat_max=56.225297,\n",
+    "    lon_min=8.662215, lon_max=9.354390,\n",
     "    soil_property=['clay', 'sand', 'silt', 'ocs'],\n",
     "    depth=['0-5cm', '5-15cm', '15-30cm', '0-30cm'],\n",
     "    value='mean'\n",
