--- a/README.ipynb
+++ b/README.ipynb
@@ -33,7 +33,7 @@
     "*   [Querying data using `SoilGrids`](#querying-data)\n",
     "*   [Getting the property (clay, sand, silt) with the highest value for each point](#rank-properties)\n",
     "*   [Analysing the relationship between clay, sand, silt and organic carbon stock](#property-relationships)\n",
-    "*   [Additional features](additional-features)\n",
+    "*   [Additional features](#additional-features)\n",
     "    *   [Method `SoilGrids.plot_ocs_property_relationships()`](#plot_ocs_property_relationships)\n",
     "    *   [Method `SoilGrids.plot_property_map()`](#plot_property_map)\n",
     "    *   [Method `SoilGrids.aggregate_means()`](#aggregate_means)\n",
