--- a/README.ipynb
+++ b/README.ipynb
@@ -46,7 +46,7 @@
     "This package can be installed from GitHub using `pip`:\n",
     "\n",
     "```bash\n",
-    "pip install git+https://github.com/wurli/soilgrids\n",
+    "python -m pip install git+https://github.com/wurli/soilgrids\n",
     "```\n",
     "\n",
     "## Querying data using `SoilGrids` <a name=\"querying-data\"></a>\n",
@@ -341,6 +341,7 @@
     }
    ],
    "source": [
+    "# Note: plotly may require you to install statsplot\n",
     "fig = sg.plot_ocs_property_relationships()\n",
     "\n",
     "fig.write_image(\"README_files/ocs_property_relationships.png\")\n",
