add unsaved changes to readme

--- a/README.ipynb
+++ b/README.ipynb
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "# Note: plotly may require you to install statsplot\n",
+    "# Note: statsmodels must be installed to fit the regression line\n",
     "fig = sg.plot_ocs_property_relationships()\n",
     "\n",
     "fig.write_image(\"README_files/ocs_property_relationships.png\")\n",
